fixed left aligned desktop

--- a/blocks/fancy-quote/fancy-quote.css
+++ b/blocks/fancy-quote/fancy-quote.css
@@ -3,7 +3,7 @@
 .fancy-quote-container {
   padding: 3rem 2rem !important;
   max-width: 1200px;
-  margin: 1rem;
+  margin: 0 auto;
   text-align: center;
   background-color: #191B22;
   border-radius: 1rem;
